force-app/main/default/objects/Approval_Combination__c/Approval_Combination__c.object-meta.xml
<CustomObject>
    <label>Approval Combination</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Approval Combination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Combination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>