force-app/main/default/objects/Approval_Combination__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval</label>
    <referenceTo>Approval__c</referenceTo>
    <relationshipLabel>Approval Combination</relationshipLabel>
    <relationshipName>Approval_Combination</relationshipName>
    <type>Lookup</type>
</CustomField>