force-app/main/default/objects/Approval_Combination__c/fields/Deepdive_in_customer_requirements_needed__c.field-meta.xml
<CustomField>
    <fullName>Deepdive_in_customer_requirements_needed__c</fullName>
    <label>Deepdive in customer requirements needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>