force-app/main/default/objects/Approval_Combination__c/fields/Proceed__c.field-meta.xml
<CustomField>
    <fullName>Proceed__c</fullName>
    <label>Proceed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>