force-app/main/default/objects/Approval_Combination__c/fields/Requirements_vs_Spec__c.field-meta.xml
<CustomField>
    <fullName>Requirements_vs_Spec__c</fullName>
    <inlineHelpText>Customer/Prospect requirements versus factory/product (=spec): please list the GAPS &amp; benefits</inlineHelpText>
    <label>Requirements vs. Spec</label>
    <type>TextArea</type>
</CustomField>