force-app/main/default/objects/Approval_Combination__c/fields/Sample_Requests__c.field-meta.xml
<CustomField>
    <fullName>Sample_Requests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Samples Needed?</label>
    <referenceTo>Sample_Transaction__c</referenceTo>
    <relationshipLabel>Approval Combination</relationshipLabel>
    <relationshipName>Approval_Combination</relationshipName>
    <type>Lookup</type>
</CustomField>