force-app/main/default/objects/Approval_Combination__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>DeepDive</fullName>
            </value>
            <value>
                <fullName>Final Closing</fullName>
            </value>
            <value>
                <fullName>Sample Request</fullName>
            </value>
            <value>
                <fullName>Trial Shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>