force-app/main/default/objects/Approval_Combination__c/fields/Subprocesses_to_start__c.field-meta.xml
<CustomField>
    <fullName>Subprocesses_to_start__c</fullName>
    <label>Subprocesses to start?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>