force-app/main/default/objects/Approval_Combination__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approval Combination</relationshipLabel>
    <relationshipName>Approval_Combination</relationshipName>
    <type>Lookup</type>
</CustomField>