force-app/main/default/objects/Approval_Combination__c/fields/Trial_Shipment_Colleague__c.field-meta.xml
<CustomField>
    <fullName>Trial_Shipment_Colleague__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who needs to arrange the trial shipment?</inlineHelpText>
    <label>Trial Shipment Colleague</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Combination</relationshipName>
    <type>Lookup</type>
</CustomField>