force-app/main/default/objects/Approval_Combination__c/fields/Trial_Shipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Trial_Shipment_Needed__c</fullName>
    <label>Trial Shipment Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>